--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2024"
 authors = ["Avdushin<itsdobro@gmail.com>"]
 
-
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
+time = { version = "0.3", features = ["macros", "formatting"] }
+totp-rs = { version = "5", features = ["default"] }
 serde_json = "1"
 base64 = "0.21"
 rand = "0.8"
@@ -15,7 +16,6 @@ argon2 = "0.5"
 zeroize = "1"
 chacha20poly1305 = "0.10"
 rpassword = "7"
-time = { version = "0.3", features = ["macros", "formatting"] }
 dirs = "5"
 thiserror = "1"
 anyhow = "1"
@@ -24,3 +24,4 @@ tar = "0.4"
 flate2 = "1"
 zip = { version = "0.6" }
 walkdir = "2"
+url = "2"
