--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
     tags: [ "*" ]
   pull_request:
 
+# важно: нужны права на запись в contents, чтобы создавать релизы
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build binaries
@@ -39,9 +43,16 @@ jobs:
           name: ${{ matrix.artifact_name }}
           path: ${{ matrix.binary_path }}
 
+      # Готовим файл с нужным именем для релиза (cp pm → pm-linux-amd64 и т.п.)
+      - name: Prepare release binary
+        if: startsWith(github.ref, 'refs/tags/')
+        run: cp "${{ matrix.binary_path }}" "${{ matrix.artifact_name }}"
+
       - name: Upload binary to GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          files: ${{ matrix.binary_path }}#${{ matrix.artifact_name }}
+          files: ${{ matrix.artifact_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
